libs/common-lib/src/main/java/com/example/common/error/exception/package-info.java
@NonNullApi
@NonNullFields
package com.example.common.error.exception;

import org.springframework.lang.NonNullApi;
import org.springframework.lang.NonNullFields;
